--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
       <div class="container">
         <h3 id="city"></h3>
         <h3 id="date"></h3>
+        <h3 id="temperature"></h3>
+          <h3 id="humidity"></h3>
+        </h3>
       </div>
 
     <div class="footer">
