--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 
     
       <div class="container">
-        <h3 id="city"></h3>
-        <h3 id="date"></h3>
-        <h3 id="temperature"></h3>
-          <h3 id="humidity"></h3>
+        <h3 id="city">City:</h3>
+        <h3 id="date">Date:</h3>
+        <h3 id="temperature">Temp-Min:</h3>
+          <h3 id="temp">Temp-Max:</h3>
         </h3>
       </div>
 
